# challenges

./: .clang-format  .gitignore  .mypyrc  .pylintrc  CMakeListsCommon.cmake  manage.pl  requirements.txt
advent_of_code_2023/: .mypyrc  manage.pl  pylint_reference.txt  requirements.txt  run.py
advent_of_code_2023/src/day_1/: main.py  trebuchet.py  trebuchet_test.py  wording.txt
advent_of_code_2023/src/day_10/: main.py  pipe_maze.py  pipe_maze_test.py  wording.txt
advent_of_code_2023/src/day_11/: cosmic_expansion.py  cosmic_expansion_test.py  main.py  wording.txt
advent_of_code_2023/src/day_12/: hot_springs.py  hot_springs_test.py  main.py  wording.txt
advent_of_code_2023/src/day_13/: main.py  point_of_incidence.py  point_of_incidence_test.py  wording.txt
advent_of_code_2023/src/day_14/: main.py  parabolic_reflector_dish.py  parabolic_reflector_dish_test.py  wording.txt
advent_of_code_2023/src/day_15/: lens_library.py  lens_library_test.py  main.py  wording.txt
advent_of_code_2023/src/day_16/: main.py  the_floor_will_be_lava.py  the_floor_will_be_lava_test.py  wording.txt
advent_of_code_2023/src/day_17/: clumsy_crucible.py  clumsy_crucible_test.py  main.py  wording.txt
advent_of_code_2023/src/day_18/: lavaduct_lagoon.py  lavaduct_lagoon_test.py  main.py  wording.txt
advent_of_code_2023/src/day_19/: aplenty.py  aplenty_test.py  main.py  wording.txt
advent_of_code_2023/src/day_2/: cube_conundrum.py  cube_conundrum_test.py  main.py  wording.txt
advent_of_code_2023/src/day_20/: main.py  pulse_propagation.py  pulse_propagation_test.py
advent_of_code_2023/src/day_3/: gear_ratios.py  gear_ratios_test.py  main.py  wording.txt
advent_of_code_2023/src/day_4/: main.py  scratchcards.py  scratchcards_test.py  wording.txt
advent_of_code_2023/src/day_5/: main.py  seed_almanac.py  seed_almanac_test.py  wording.txt
advent_of_code_2023/src/day_6/: boat_race.py  boat_race_test.py  main.py  wording.txt
advent_of_code_2023/src/day_7/: camel_cards.py  camel_cards_test.py  main.py  wording.txt
advent_of_code_2023/src/day_8/: haunted_wasteland.py  haunted_wasteland_test.py  main.py  wording.txt
advent_of_code_2023/src/day_9/: main.py  mirage_maintenance.py  mirage_maintenance_test.py  wording.txt
advent_of_code_2023/src/util/: file.py  file_test.py  position.py  (+1 more)
coderpad/: All_these_types_of_plate.py  Can_you_beat_me_at_poker.py  Maximize_bankruptcy.py
codingame/spring-2020/: game.py  game_test.py  manage.pl  pylint_reference.txt
interval_map/: CMakeLists.txt  conanfile.py  interval_map.hpp  interval_map_test.cpp
manage/: Build.pm  Configure.pm  CppStatic.pm  Execute.pm  Platform.pm  Prepare.pm  Pyenv.pm  PythonStatic.pm  Run.pm  Test.pm
skeleton/: A.hpp  CMakeLists.txt  conanfile.py  main.cpp  manage.pl
skeleton/command_line/: CMakeLists.txt  main.cpp
skeleton/lib/: A.cpp  A.hpp  CMakeLists.txt
skeleton/lib/test/: A_test.cpp  CMakeLists.txt
skeleton/test/: A_test.cpp  CMakeLists.txt
